--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^8.2.0",
-        "laravel-zero/framework": "^11.0.2"
+        "laravel-zero/framework": "^11.0.3"
     },
     "require-dev": {
-        "laravel/pint": "^1.18.1",
+        "laravel/pint": "^1.18.3",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^3.5.1"
+        "pestphp/pest": "^3.6.0"
     },
     "autoload": {
         "psr-4": {
@@ -46,5 +46,5 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
-    "bin": ["console-app"]
+    "bin": ["to-do"]
 }
