--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     ],
     "require": {
         "php": "^8.2.0",
+        "illuminate/database": "^11.5",
         "laravel-zero/framework": "^11.0.3"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.18.3",
         "mockery/mockery": "^1.6.12",
         "pestphp/pest": "^3.6.0"
