--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,5 +20,6 @@
     <php>
         <server name="DB_CONNECTION" value="sqlite"/>
         <server name="DB_DATABASE" value=":memory:"/>
+        <env name="APP_ENV" value="testing"/>
     </php>
 </phpunit>
