--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     ],
     "require": {
         "php": "^8.2.0",
-        "illuminate/database": "^11.5",
+        "illuminate/database": "^11.34.2",
         "laravel-zero/framework": "^11.0.3",
         "laravel/serializable-closure": "^2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
+        "fakerphp/faker": "^1.24.1",
+        "larastan/larastan": "^2.9.12",
         "laravel/pint": "^1.18.3",
         "mockery/mockery": "^1.6.12",
         "pestphp/pest": "^3.6.0"
