--- a/composer.json
+++ b/composer.json
@@ -51,5 +51,22 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
-    "bin": ["to-do"]
+    "bin": ["to-do"],
+    "scripts": {
+        "lint": [
+            "pint"
+        ],
+        "test:lint": [
+            "pint --test"
+        ],
+        "test:types": [
+            "phpstan analyse"
+        ],
+        "test:type-coverage": "pest --type-coverage --min=100",
+        "test": [
+            "@test:lint",
+            "@test:types",
+            "@test:type-coverage"
+        ]
+    }
 }
